--- a/css/buttons.css
+++ b/css/buttons.css
@@ -1,18 +1,46 @@
 .button, .primaryButton, .secondaryButton {
   display: inline-block;
-  padding: 0.5rem 2rem;
+  padding: 0.5rem 3rem;
   font-size: 1.2rem;
   margin: 1.5rem 0;
   font-weight: 400;
 }
 
+@media screen and (min-width: 520px) {
+  .button, .primaryButton, .secondaryButton {
+    padding: 1rem 2.5rem;
+    font-size: 1.5rem;
+  }
+}
+
 .primaryButton {
   color: #d4d4d4;
   background-color: #009AD8;
+  cursor: pointer;
+  position: relative;
+  padding: 0.5rem 3rem;
+}
+
+.primaryButton::after {
+  content: '\2192';
+  font-weight: 700;
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translateY(-60%) translateX(-1rem);
+          transform: translateY(-60%) translateX(-1rem);
+  opacity: 0;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
 }
 
 .primaryButton:hover {
   background-color: -50;
+}
+
+.primaryButton:hover::after {
+  opacity: 1;
+  -webkit-transform: translateY(-60%) translateX(0.5rem);
+          transform: translateY(-60%) translateX(0.5rem);
 }
 
 .secondaryButton {
@@ -23,5 +51,29 @@
 }
 
 .linkButton {
-  color: orange;
+  color: #2c2c2f;
+  font-weight: 700;
+  position: relative;
+}
+
+.linkButton::after {
+  content: '\2192';
+  font-weight: 700;
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translateY(-50%) translateX(-1rem);
+          transform: translateY(-50%) translateX(-1rem);
+  opacity: 0;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+}
+
+.linkButton:hover {
+  background-color: -50;
+}
+
+.linkButton:hover::after {
+  opacity: 1;
+  -webkit-transform: translateY(-50%) translateX(0.5rem);
+          transform: translateY(-50%) translateX(0.5rem);
 }
