--- a/sass/buttons.sass
+++ b/sass/buttons.sass
@@ -2,25 +2,67 @@
 
 .button
     display: inline-block
-    padding: 0.5rem 2rem
+    padding: 0.5rem 3rem
     font-size: 1.2rem
     margin: 1.5rem 0
     font-weight: 400
+    @media screen and ( min-width: $midScreen )
+        padding: 1rem 2.5rem
+        font-size: 1.5rem
+
     
 .primaryButton
     @extend .button
     color: $fontSecColor
     background-color: $priColor
+    cursor: pointer
+    position: relative
+    padding: 0.5rem 3rem
+
+
+    &::after
+        content: '\2192'
+        font-weight: 700
+        position: absolute
+        top: 50%
+        transform: translateY(-60%) translateX(-1rem)
+        opacity: 0
+        transition: all 0.3s ease-in-out
 
     &:hover
         background-color: -50
-        
+        &::after
+            opacity: 1
+            transform: translateY(-60%) translateX(0.5rem)
+
+
 .secondaryButton
     @extend .button
     background-color: none
     color: $priColor
     box-shadow: inset 0 0 0 1px $priColor
 
+
+
 .linkButton
-    color: orange
+    color: $fontPriColor
+    font-weight: 700
+    position: relative
+
+    // background-color: $bgSecColor
+    // padding: 0.5rem 2rem
+    &::after
+        content: '\2192'
+        font-weight: 700
+        position: absolute
+        top: 50%
+        transform: translateY(-50%) translateX(-1rem)
+        opacity: 0
+        transition: all 0.3s ease-in-out
+
+    &:hover
+        background-color: -50
+        &::after
+            opacity: 1
+            transform: translateY(-50%) translateX(0.5rem)
     
