--- a/sass/typography.sass
+++ b/sass/typography.sass
@@ -10,20 +10,20 @@
 
 h1
     font-family: 'Abril Fatface', cursive
-    font-size: 4rem
+    font-size: 2.6rem
     color: white
     
-    @media screen and ( max-width: $midScreen )
-        font-size: 2.6rem
+    @media screen and ( min-width: $midScreen )
+        font-size: 5rem
 
 
 h2
-    font-size: 4rem
-    line-height: 3rem
+    font-size: 3rem
+    line-height: 2.5rem
     font-family: 'Abril Fatface', cursive
-    @media screen and ( max-width: $midScreen )
-        font-size: 3rem
-        line-height: 2rem
+    @media screen and ( min-width: $midScreen )
+        font-size: 5rem
+        line-height: 4rem
 
 h3
     font-weight: 700
@@ -36,6 +36,9 @@ h4
 p
     font-weight: 300
     font-size: 1rem
+    @media screen and ( min-width: $midScreen )
+        font-size: 1.3rem
+
 
 strong
     font-weight: 700
@@ -48,5 +51,5 @@ a
     font-size: 1rem
 
 
-s
-    text-decoration: line-through
+// s
+//     text-decoration: line-through
