--- a/sass/buttons.sass
+++ b/sass/buttons.sass
@@ -53,6 +53,7 @@
     // padding: 0.5rem 2rem
     &::after
         content: '\2192'
+        font-size: 1.5rem
         font-weight: 700
         position: absolute
         top: 50%
