--- a/sass/style_mobile.sass
+++ b/sass/style_mobile.sass
@@ -365,14 +365,13 @@ header
                             height: 60%
                             // color: #999
 
-
 .process
     overflow: hidden
     position: relative
     min-height: 80vh
     width: 100%
+    margin-top: 6rem 
     padding: 0
-    padding-bottom: 0
 
     .container__process
         width: 100%
@@ -388,6 +387,7 @@ header
             max-width: 100%
                 
             .title__process
+                margin-left: 1rem
                 @media screen and ( min-width: $midScreen )
                     max-width: $wrapper
                     margin: 4rem auto 4rem auto
@@ -575,6 +575,7 @@ header
 
                             img
                                 width: 100px
+                                background-color: transparent
                             
                             .mobileMessage
                                 position: absolute
@@ -735,6 +736,7 @@ header
                 background-color: rgba($priColor , 0.4 )
                 padding: 1rem
                 width: auto
+                height: 460px
                 @media screen and ( min-width: $midScreen )
                     display: flex
                     flex-flow: row nowrap
@@ -744,104 +746,115 @@ header
                     @media screen and ( min-width: $midScreen )
                         display: block
                         // background-color: transparent
-                        width: 30%
+                        width: 50%
 
 
                 .inputs__contactform
+                    height: 100%
+                    // width: 50%
+                    display: flex
                     flex-flow: column nowrap
                     margin: 0 auto
+                    align-items: center
+                    justify-content: center
+
 
                     @media screen and ( min-width: $midScreen )
-                        display: block
-                        width: 60%
+                        // display: block
+                        width: 100%
                         margin-right: 0
 
+                    h3
+                        margin-bottom: 2rem
+
+                    #form
+                        width: 100%
+                        right: 0
+                        margin-left: auto
 
 
+                        .input__contactform
+                            width: 100%
+                            position: relative
+                            margin: 1.5rem auto
+                            
+                            label
+                                position: absolute
+                                top: 0.3rem
+                                left: 0.5rem
+                                color: $fontPriColor
+                                transform: translateY(0)
+                                pointer-events: none
+                                transition: 300ms ease-in-out
+                            
+                            input, textarea
+                                width: 100%
+                                max-width: 550px
+                                margin: 0 auto
+                                border: none
+                                outline: none
+                                font-size: 1rem
+                                padding: 0.25rem 0.5rem
+                                resize: none
+                                background-color: rgba(white, 0.2)
+                                transition: 500ms ease
 
-                h3
-                    margin-bottom: 2rem
+                                &:invalid
+                                    color: darkred
+                                    border: 1px solid darkred
 
-            .input__contactform
-                width: auto
-                position: relative
-                margin: 1.5rem auto
-                
-                label
-                    position: absolute
-                    top: 0.3rem
-                    left: 0.5rem
-                    color: $fontPriColor
-                    transform: translateY(0)
-                    pointer-events: none
-                    transition: 300ms ease-in-out
-                
-                input, textarea
-                    width: 100%
-                    max-width: 550px
-                    margin: 0 auto
-                    border: none
-                    outline: none
-                    font-size: 1rem
-                    padding: 0.25rem 0.5rem
-                    resize: none
-                    background-color: rgba(white, 0.2)
-                    transition: 500ms ease
+                                    & + label
+                                        transform: translateY(-1.5rem)
+                                        color: darkred
+                                        font-size: 0.9rem
 
-                    &:invalid
-                        color: darkred
-                        border: 1px solid darkred
+                                &:placeholder-shown
+                                    color: $fontPriColor
+                                    background-color: rgba(white, 0.2)
+                                    border: none
+                                    & + label
+                                        transform: translateY(0)
+                                        color: $fontPriColor
 
-                        & + label
-                            transform: translateY(-1.5rem)
-                            color: darkred
-                            font-size: 0.9rem
+                                        // font-size: 0.9rem
+                                &:focus
+                                    background-color: rgba(white,0.5)
+                                    & + label
+                                        transform: translateY(-1.5rem)
+                                        font-size: 0.9rem
 
-                    &:placeholder-shown
-                        color: $fontPriColor
-                        background-color: rgba(white, 0.2)
-                        border: none
-                        & + label
-                            transform: translateY(0)
-                            color: $fontPriColor
+                                &:valid
+                                    // background-color: green
+                                    & + label
+                                        transform: translateY(-1.5rem)
+                                        font-size: 0.9rem
+                                
 
-                            // font-size: 0.9rem
-                    &:focus
-                        background-color: rgba(white,0.5)
-                        & + label
-                            transform: translateY(-1.5rem)
-                            font-size: 0.9rem
+                            button
+                                outline: none
+                                border: none
+                                margin: 0
 
-                    &:valid
-                        // background-color: green
-                        & + label
-                            transform: translateY(-1.5rem)
-                            font-size: 0.9rem
-                    
+                        .terms__contactform
+                            padding: 0.5rem 0
+                            // border: 1px red solid
+                            label
+                                margin-left: 1rem
+                            #terms
+                                width: auto
 
-                button
-                    outline: none
-                    border: none
-                    margin: 0
+                    .emailSuccess
+                        display: none
+                        // transform: translateY(200px)
 
-            .terms__contactform
-                padding: 0.5rem 0
-                // border: 1px red solid
-                label
-                    margin-left: 1rem
-                #terms
-                    width: auto
+                        padding: 1rem
+                        border: 2px green solid
+                        background-color: rgba(white,0.6)
 
-            .emailSuccess
-                display: none
-                padding: 1rem
-                border: 2px green solid
-                background-color: rgba(white,0.6)
-                
-                p
-                    color: green
-
-    
+                        
+                        p
+                            color: green
+                            text-align: center
 
 
 footer
