--- a/css/style.css
+++ b/css/style.css
@@ -18,26 +18,26 @@
 
 h1 {
   font-family: 'Abril Fatface', cursive;
-  font-size: 4rem;
+  font-size: 2.6rem;
   color: white;
 }
 
-@media screen and (max-width: 520px) {
+@media screen and (min-width: 520px) {
   h1 {
-    font-size: 2.6rem;
+    font-size: 5rem;
   }
 }
 
 h2, .process .container__process .box__process .boxcards__process .card__process .num__process {
-  font-size: 4rem;
-  line-height: 3rem;
+  font-size: 3rem;
+  line-height: 2.5rem;
   font-family: 'Abril Fatface', cursive;
 }
 
-@media screen and (max-width: 520px) {
+@media screen and (min-width: 520px) {
   h2, .process .container__process .box__process .boxcards__process .card__process .num__process {
-    font-size: 3rem;
-    line-height: 2rem;
+    font-size: 5rem;
+    line-height: 4rem;
   }
 }
 
@@ -56,6 +56,12 @@ p {
   font-size: 1rem;
 }
 
+@media screen and (min-width: 520px) {
+  p {
+    font-size: 1.3rem;
+  }
+}
+
 strong {
   font-weight: 700;
 }
@@ -71,19 +77,47 @@ a {
 
 .button, .primaryButton, .secondaryButton {
   display: inline-block;
-  padding: 0.5rem 2rem;
+  padding: 0.5rem 3rem;
   font-size: 1.2rem;
   margin: 1.5rem 0;
   font-weight: 400;
 }
 
+@media screen and (min-width: 520px) {
+  .button, .primaryButton, .secondaryButton {
+    padding: 1rem 2.5rem;
+    font-size: 1.5rem;
+  }
+}
+
 .primaryButton {
   color: #d4d4d4;
   background-color: #009AD8;
+  cursor: pointer;
+  position: relative;
+  padding: 0.5rem 3rem;
+}
+
+.primaryButton::after {
+  content: '\2192';
+  font-weight: 700;
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translateY(-60%) translateX(-1rem);
+          transform: translateY(-60%) translateX(-1rem);
+  opacity: 0;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
 }
 
 .primaryButton:hover {
   background-color: -50;
+}
+
+.primaryButton:hover::after {
+  opacity: 1;
+  -webkit-transform: translateY(-60%) translateX(0.5rem);
+          transform: translateY(-60%) translateX(0.5rem);
 }
 
 .secondaryButton {
@@ -94,7 +128,32 @@ a {
 }
 
 .linkButton {
-  color: orange;
+  color: #2c2c2f;
+  font-weight: 700;
+  position: relative;
+}
+
+.linkButton::after {
+  content: '\2192';
+  font-size: 1.5rem;
+  font-weight: 700;
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translateY(-50%) translateX(-1rem);
+          transform: translateY(-50%) translateX(-1rem);
+  opacity: 0;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+}
+
+.linkButton:hover {
+  background-color: -50;
+}
+
+.linkButton:hover::after {
+  opacity: 1;
+  -webkit-transform: translateY(-50%) translateX(0.5rem);
+          transform: translateY(-50%) translateX(0.5rem);
 }
 
 body {
