--- a/css/buttons.css
+++ b/css/buttons.css
@@ -22,12 +22,14 @@
 }
 
 .primaryButton::after {
-  content: '\2192';
+  content: url("https://api.iconify.design/bi/arrow-right-short.svg?height=32");
   font-weight: 700;
+  -webkit-filter: invert(0.9);
+          filter: invert(0.9);
   position: absolute;
   top: 50%;
-  -webkit-transform: translateY(-60%) translateX(-1rem);
-          transform: translateY(-60%) translateX(-1rem);
+  -webkit-transform: translateY(-40%) translateX(-1rem);
+          transform: translateY(-40%) translateX(-1rem);
   opacity: 0;
   -webkit-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
@@ -39,8 +41,8 @@
 
 .primaryButton:hover::after {
   opacity: 1;
-  -webkit-transform: translateY(-60%) translateX(0.5rem);
-          transform: translateY(-60%) translateX(0.5rem);
+  -webkit-transform: translateY(-40%) translateX(0);
+          transform: translateY(-40%) translateX(0);
 }
 
 .secondaryButton {
@@ -54,16 +56,22 @@
   color: #2c2c2f;
   font-weight: 700;
   position: relative;
+  margin-top: 1.5rem;
+}
+
+@media screen and (min-width: 520px) {
+  .linkButton {
+    font-size: 1.2rem;
+  }
 }
 
 .linkButton::after {
-  content: '\2192';
-  font-size: 1.5rem;
+  content: url("https://api.iconify.design/bi/arrow-right-short.svg?height=24");
   font-weight: 700;
   position: absolute;
   top: 50%;
-  -webkit-transform: translateY(-50%) translateX(-1rem);
-          transform: translateY(-50%) translateX(-1rem);
+  -webkit-transform: translateY(-40%) translateX(-1rem);
+          transform: translateY(-40%) translateX(-1rem);
   opacity: 0;
   -webkit-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
@@ -75,6 +83,6 @@
 
 .linkButton:hover::after {
   opacity: 1;
-  -webkit-transform: translateY(-50%) translateX(0.5rem);
-          transform: translateY(-50%) translateX(0.5rem);
+  -webkit-transform: translateY(-40%) translateX(0);
+          transform: translateY(-40%) translateX(0);
 }
